--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 curl = "0.4.45"
 url = "2.5.0"
+serde = { version = "1.0", features = ["derive", "alloc"] }
+serde_json = "1.0"
+geo = { version = "0.27.0", features = ["use-serde"] }
