--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ url = "2.5.0"
 serde = { version = "1.0", features = ["derive", "alloc"] }
 serde_json = "1.0"
 geo = { version = "0.27.0", features = ["use-serde"] }
+strum = "0.26"
+strum_macros = "0.26"
