--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0"
 geo = { version = "0.27.0", features = ["use-serde"] }
 strum = "0.26"
 strum_macros = "0.26"
+clap = { version = "4.5.3", features = ["derive"] }
