--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ geo = { version = "0.27.0", features = ["use-serde"] }
 strum = "0.26"
 strum_macros = "0.26"
 clap = { version = "4.5.3", features = ["derive"] }
+
+[dev-dependencies]
+rstest = "0.19.0"
