--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ strum = "0.26"
 strum_macros = "0.26"
 clap = { version = "4.5.3", features = ["derive"] }
 topological-sort = "0.2.2"
+gpx = "0.10.0"
 
 [dev-dependencies]
 rstest = "0.19.0"
