--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ strum_macros = "0.26"
 clap = { version = "4.5.3", features = ["derive"] }
 topological-sort = "0.2.2"
 gpx = "0.10.0"
+time = { version = "0.3.36", features = ["formatting"] }
 
 [dev-dependencies]
 rstest = "0.19.0"
