--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ topological-sort = "0.2.2"
 gpx = "0.10.0"
 time = { version = "0.3.36", features = ["formatting"] }
 num = "0.4.3"
+num-traits = "0.2.19"
 
 [dev-dependencies]
 rstest = "0.19.0"
