--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,23 +1,34 @@
 [package]
 name = "ski-analyzer"
 version = "0.1.0"
+description = "Ski Analyzer"
+authors = ["you"]
+license = ""
+repository = "https://github.com/petersohn/ski-analyzer"
 edition = "2021"
+rust-version = "1.71"
+default-run = "ski-analyzer"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 name = "ski_analyzer"
 crate-type = ["cdylib", "lib", "staticlib"]
-bench = false
 
 [[bin]]
 name = "ski-analyzer-cli"
+
+[build-dependencies]
+tauri-build = { version = "2.0.0-rc.12", features = [] }
 
 [dependencies]
 curl = "0.4.45"
 url = "2.5.0"
 serde = { version = "1.0", features = ["derive", "alloc"] }
 serde_json = "1.0"
+log = "0.4"
+tauri = { version = "2.0.0-rc.15", features = [] }
+tauri-plugin-log = "2.0.0-rc"
 geo = { version = "0.27.0", features = ["use-serde"] }
 strum = "0.26"
 strum_macros = "0.26"
