--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@angular/forms": "^18.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@tauri-apps/api": "^1.6.0",
+    "@types/rbush": "==3.0.3",
+    "ol": "^10.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
