--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@angular/forms": "^18.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/router": "^18.0.0",
-    "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/api": ">=2.0.0-rc.0",
+    "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
     "@types/rbush": "==3.0.3",
     "ol": "^10.1.0",
     "rxjs": "~7.8.0",
