--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,9 @@ crate-type = ["cdylib", "lib", "staticlib"]
 [[bin]]
 name = "ski-analyzer-cli"
 
+[[bin]]
+name = "ski-analyzer"
+
 [build-dependencies]
 tauri-build = { version = "2.0.0-rc.12", features = [] }
 
