--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tauri-apps/plugin-dialog": "^2.0.0-rc",
     "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
     "@types/rbush": "==3.0.3",
+    "dayjs": "^1.11.13",
     "ol": "^10.1.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
