--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/rbush": "==3.0.3",
     "dayjs": "^1.11.13",
     "ol": "^10.1.0",
+    "prettier": "^3.3.3",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
