--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,3 +21,5 @@ serde_json = "1"
 ski-analyzer-lib = { path = "ski-analyzer-lib" }
 log = "0.4"
 tauri-plugin-dialog = "2.0.0-rc"
+ouroboros = "0.18.4"
+gpx = "0.10.0"
