--- a/src-tauri/ski-analyzer-lib/Cargo.toml
+++ b/src-tauri/ski-analyzer-lib/Cargo.toml
@@ -29,6 +29,7 @@ gpx = "0.10.0"
 time = { version = "0.3.36", features = ["formatting"] }
 num = "0.4.3"
 num-traits = "0.2.19"
+function_name = "0.3.0"
 
 [dev-dependencies]
 rstest = "0.19.0"
