--- a/src-tauri/ski-analyzer-lib/Cargo.toml
+++ b/src-tauri/ski-analyzer-lib/Cargo.toml
@@ -20,7 +20,7 @@ url = "2.5.0"
 serde = { version = "1.0", features = ["derive", "alloc"] }
 serde_json = "1.0"
 log = "0.4"
-geo = { version = "0.28.0", path="geo/geo", features = ["use-serde"] }
+geo = { version = "0.29.0", features = ["use-serde"] }
 strum = "0.26"
 strum_macros = "0.26"
 clap = { version = "4.5.3", features = ["derive"] }
