--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,3 +23,4 @@ log = "0.4"
 tauri-plugin-dialog = "2.0.0-rc"
 ouroboros = "0.18.4"
 gpx = "0.10.0"
+geo = { version = "0.29.0", features = ["serde"] }
