--- a/package.json
+++ b/package.json
@@ -9,43 +9,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/cdk": "^18.2.6",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/material": "^18.2.6",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/router": "^18.0.0",
-    "@tauri-apps/api": ">=2.0.0-rc.0",
-    "@tauri-apps/plugin-dialog": "^2.0.0-rc",
-    "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
-    "@types/rbush": "==3.0.3",
+    "@angular/animations": "^18.2.12",
+    "@angular/cdk": "^18.2.13",
+    "@angular/common": "^18.2.12",
+    "@angular/compiler": "^18.2.12",
+    "@angular/core": "^18.2.12",
+    "@angular/forms": "^18.2.12",
+    "@angular/material": "^18.2.13",
+    "@angular/platform-browser": "^18.2.12",
+    "@angular/router": "^18.2.12",
+    "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/plugin-dialog": "^2.0.1",
+    "@tauri-apps/plugin-shell": "^2.0.1",
+    "@types/rbush": "^3.0.3",
     "dayjs": "^1.11.13",
-    "ol": "^10.1.0",
+    "ol": "^10.2.1",
     "prettier": "^3.3.3",
     "rxjs": "~7.8.1",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.0"
+    "tslib": "^2.8.1",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.1",
-    "@angular/cli": "^18.0.0",
-    "@angular/compiler-cli": "^18.0.0",
+    "@angular-devkit/build-angular": "^18.2.12",
+    "@angular/cli": "^18.2.12",
+    "@angular/compiler-cli": "^18.2.12",
     "@tauri-apps/cli": "2.0.0-rc.16",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^16.11.35",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^16.18.119",
     "copyfiles": "^2.4.1",
     "jasmine-core": "~5.3.0",
     "jasmine-marbles": "~0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ts-node": "~10.9.0",
-    "typescript": "~5.5.0"
+    "ts-node": "~10.9.2",
+    "typescript": "~5.5.4"
   }
 }
