--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,3 +24,4 @@ tauri-plugin-dialog = "2.0.0-rc"
 gpx = "0.10.0"
 geo = { version = "0.29.0", features = ["serde"] }
 time = { version = "0.3.36", features = ["macros", "parsing"] }
+tokio = { version = "1.42.0", features = ["macros", "time"] }
