--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ gpx = "0.10.0"
 geo = { version = "0.29.0", features = ["serde"] }
 time = { version = "0.3.36", features = ["macros", "parsing"] }
 tokio = { version = "1.42.0", features = ["macros", "time"] }
+uuid = { version = "1.11.0", features = ["v4", "serde"] }
