--- a/src-tauri/ski-analyzer-lib/Cargo.toml
+++ b/src-tauri/ski-analyzer-lib/Cargo.toml
@@ -14,6 +14,9 @@ rust-version = "1.71"
 name = "ski_analyzer_lib"
 crate-type = ["cdylib", "lib", "staticlib"]
 
+[[bin]]
+name = "ski-analyzer-cli"
+
 [dependencies]
 curl = "0.4.45"
 url = "2.5.0"
