--- a/src-tauri/ski-analyzer-lib/Cargo.toml
+++ b/src-tauri/ski-analyzer-lib/Cargo.toml
@@ -18,7 +18,6 @@ crate-type = ["cdylib", "lib", "staticlib"]
 name = "ski-analyzer-cli"
 
 [dependencies]
-curl = "0.4.45"
 url = "2.5.0"
 serde = { version = "1.0", features = ["derive", "alloc"] }
 serde_json = "1.0"
@@ -33,6 +32,8 @@ time = { version = "0.3.36", features = ["formatting"] }
 num = "0.4.3"
 num-traits = "0.2.19"
 function_name = "0.3.0"
+reqwest = "0.12.12"
+tokio = { version = "1.43.0", features = ["rt", "macros"] }
 
 [dev-dependencies]
 rstest = "0.19.0"
