--- a/src-tauri/ski-analyzer-lib/Cargo.toml
+++ b/src-tauri/ski-analyzer-lib/Cargo.toml
@@ -33,7 +33,8 @@ num = "0.4.3"
 num-traits = "0.2.19"
 function_name = "0.3.0"
 reqwest = "0.12.12"
-tokio = { version = "1.43.0", features = ["rt", "macros"] }
+tokio = { version = "1.43.0", features = ["rt", "macros", "test-util"] }
+futures = "0.3.31"
 
 [dev-dependencies]
 rstest = "0.19.0"
