--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css",
+              "src/styles.scss",
               "node_modules/ol/ol.css"
             ],
             "scripts": []
